--- a/_pages/highlights/index.html
+++ b/_pages/highlights/index.html
@@ -27,44 +27,44 @@ highlights:
 
     - title: Boulder’s Beach
       id: one
-      description: "Auch als Lebkuchenstadt bekannt, lockt Nürnberg nicht nur zum Christkindlmarkt Besucher in die Stadt. Deren Wahrzeichen, die Kaiserbur"
+      description: "Hier posen Pinguine statt Menschen für Strand&shy;selfies: am Boulder Beach, auf dem Weg zum Kap der Guten Hoffnung. Etwas 2.500 Jackass- und Brillen&shy;pinguine erhei&shy;tern Besucher, die sich am Abschnitt Foxy Beach den Tieren nähern können. Die drei malerischen Strände von Boulders Beach laden dabei auch zum Schwimmen ein."
 
     - title: "Tour durch Maboneng"
       id: two
-      description: "Im Mittelalter war Regensburg durch florierende Handels&shy;beziehungen eine der wohl&shy;habendsten und einwohner&shy;stärksten Städte, was man dem zauber&shy;haften, "
+      description: "In Maboneng, dem Szeneviertel Johannes&shy;burgs flanieren Sie zwischen Galerien, Cafés und Boutiquen. Im Kreativ&shy;zentrum Arts on Main und der dazu&shy;gehörigen Fox Street ist jeden Sonntag der Market on Main. Nicht nur ungewohnte Aromen und inter&shy;natio&shy;nale Gerichte sind hier zu kosten; auch das Auge wird mit Kunst in jeglicher Form verwöhnt."
 
     - title: "Instagram Stop Blyde River Canyon"
       id: three
-      description: "Im Mittelalter war Regensburg durch florierende Handels&shy;beziehungen eine der wohl&shy;habendsten und einwohner&shy;stärksten Städte, was man dem zauber&shy;haften, "
+      description: "Alle, die ohne Instagram nicht reisen können, werden im Blyde River Canyon ein bezau&shy;berndes Motiv für ihre Instagram-Story finden. Die riesige grünen Schlucht hält mit God’s Window, The Pinnacle, The Potholes und mehr gleich mehrere unfassbare Ausblicke und Natur&shy;wunder bereit. Smartphones herbei! "
 
     - title: "Wanderung in den Drakensbergen"
       id: four
-      description: "Im Mittelalter war Regensburg durch florierende Handels&shy;beziehungen eine der wohl&shy;habendsten und einwohner&shy;stärksten Städte, was man dem zauber&shy;haften, "
+      description: "An der Grenze zum von Süd&shy;afrika um&shy;schlos&shy;senen Lesotho liegen die Dra&shy;kens&shy;berge, mit dem Royal Natal National Park, der für Wanderer ein gefundenes Fressen ist. Vom Sentinel Car Park starten Sie eine Wanderung zum Gipfel, 12 km an Weg, das in fünf Stunden zum Amphi&shy;theater und zu den majestä&shy;tischen Tugela Wasserfällen führt."
 
     - title: "Sundowner an den Augrabies Falls"
       id: five
-      description: "Im Mittelalter war Regensburg durch florierende Handels&shy;beziehungen eine der wohl&shy;habendsten und einwohner&shy;stärksten Städte, was man dem zauber&shy;haften, "
+      description: "Apropos Wasserfälle: unweit der nami&shy;bischen Grenze rauscht es in den Augra&shy;bies Falls im Chor in die Tiefe. Der Oranje River stürzt hier im Schwall 56 Meter in die Tiefe. Wenn dann nach&shy;mittags die Sonne die Granit&shy;felsen anleuchtet, kann das niemanden kalt lassen. "
 
     - title: "Namaqualand / West Coast NP"
       id: six
-      description: "Im Mittelalter war Regensburg durch florierende Handels&shy;beziehungen eine der wohl&shy;habendsten und einwohner&shy;stärksten Städte, was man dem zauber&shy;haften, "
+      description: "Die Blütenpracht in Namaqualand ist nicht von dieser Welt. Die trockenen Regionen der Cape West Coast wandeln sich im Frühling in ein gelbes Blüte&shy;nmeer – schier unver&shy;gess&shy;lich und ein Foto&shy;motiv, wie Sie es kaum irgendwo finden."
 
     - title: Walbeobachtung
       id: seven
-      description: "Auf der Garteninsel Lindau im Bodensee kann man nur ins Schwärmen geraten. Eingerahmt von grünen Hügeln funkelt der See, zwischen der wachsamen"
+      description: "Gleich mehrere Orte eignen sich sehr gut für Wal&shy;beobachtung. In Hermanus am Western Cape sind die Meeres&shy;riesen von Juni bis November zu sichten, an der Elephant Coast am Indischen Ozean sind Wale das ganze Jahr über zu erhaschen."
 
     - title: "Pilanesberg Nationalpark"
       id: eight
-      description: "Bekannt ist Bayreuth weltweit als Wagnerstadt und Austragungsort der Bayreuther Festspiele mit den Werken des Komponisten Richard Wagner. Wer die fränkische Stadt aber weitaus mehr prägte, war die Markgräfin Wilhelmine von Preußen. "
+      description: "Wer sich nach ganz oben traut, für den ist eine Ballon&shy;fahrt im Pilanesberg National&shy;park das Richtige. Die Luft-Safari führt über erloschene Vulkankrater hinweg und eröffnet einzigartige Vogel&shy;perspek&shy;tiven auf Antilopen und Elefantenherden."
 
     - title: "Ndebele Dörfern "
       id: nine
-      description: "Bekannt ist Bayreuth weltweit als Wagnerstadt und Austragungsort der Bayreuther Festspiele mit den Werken des Komponisten Richard Wagner. Wer die fränkische Stadt aber weitaus mehr prägte, war die Markgräfin Wilhelmine von Preußen. "
+      description: "Wie wäre es etwas traditioneller? In der Stadt Siyabuswa findet sich das Museums&shy;dorf Kghodwana. Seine Einwohner, die Ndebele lassen sich 1000 Jahre zurück&shy;verfolgen und sind für ihre farben&shy;frohe Kleidung und die geome&shy;trischen Muster ihrer Häuser bekannt."
 
 
 reasons:
 
-  title: 11 Gründe für eine Reise nach Südafrika
+  title: 11 Gründe für eine Reise nach&nbsp;Südafrika
   description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium maxime est soluta expedita inventore corrupti ipsam illo, eligendi sit id accusamus
   items:
 
@@ -131,11 +131,11 @@ reasons:
 ---
 
 
-<div class="vpad--xxl bg--light">
+<div class="vpad--xxl text--white bg--turquoise">
   <div class="container">
     <div class="width width--lg">
        <div class="text text--xl text--center">
-         <h2 class="title title--md text--semibold text--bv-darkgrey">{{page.intro-title}}</h2>
+         <h2 class="title title--lg text--bold">{{page.intro-title}}</h2>
          <div class="space--xs"></div>
          <p>{{page.intro}}</p>
        </div>
@@ -143,53 +143,24 @@ reasons:
   </div>
 </div>
 
-<div class="text--center vpad--xl ">
-  <div class="container">
-    <div class="width width--lg">
-       <div class="text text--xl text--center">
-         <h2 class="title title--lg text--semibold ">{{page.highlights.title}}</h2>
-         <div class="space--xs"></div>
-         <p>{{page.highlights.description}}</p>
-       </div>
-       <div class="space--xxl"></div>
-    </div>
-  <div class="row row--xxl-4-4-4 row--xl-6-6 row--no-gutters" >
-  {% for highlight in page.highlights.items %}
-    <div class="col text--normal text--left">
-      <div class="bg-img bg-img--1-1" style="border: 2px #fff solid; background-image: url('{{site.img}}/content/{{page.id}}/highlights/{{highlight.id}}.jpg'); border-radius: 6px;">
-       <a href="javascript:void(0);" data-modal-item="{{highlight.id}}" data-modal-group="section" class="js-open-modal bg-img__link"></a>
-        <div class="bg-img__content">
 
-          <div class="space--md"></div>
-            <h2 class="title title--xs text--bold text--left text--semibold ">{{highlight.title}}</h2>
-          <div> {{highlight.description}}</div>
-        </div>
-        <div class="bg-img__bg-overlay text--white text text--sm"></div>
-      </div>
-    </div>
- {% endfor %}
-  </div>
-</div>
-</div>
 
 <div class="vpad--xl bg--light">
   <div class="container">
     <div class="width width--lg">
        <div class="text text--xl text--center">
-         <h2 class="title title--lg  text--semibold ">{{page.reasons.title}}</h2>
+         <h2 class="title title--lg text--bold ">{{page.reasons.title}}</h2>
          <div class="space--xs"></div>
          <p>{{page.reasons.description}}</p>
 
        </div>
     </div>
   </div>
-</div>
 
-<div class="vpad--xl bg--light">
-  <div class="container " style="margin-top: -40px;">
+  <div class="container " style="margin-top: -40px;" >
   {% for reason in page.reasons.items %}
 
-    <div class="row bg--white row--no-gutters bv-box-shadow" style=" border-radius: 6px; background-image: url('{{site.img}}/content/{{page.id}}/reasons/{{reason.id}}.jpg'); background-position: center 95px; background-repeat: no-repeat;">
+    <div class="row bg--white row--no-gutters " style=" border-radius: 6px; background-image: url('{{site.img}}/content/{{page.id}}/reasons/{{reason.id}}.jpg'); background-position: center 95px; background-repeat: no-repeat;">
       <div class="bv-mob-center boxpad--lg">
         <div class="space--xs"></div>
         <div class="text--dark bv-collapsible accordion text--dark title title--xs text--bold text--upper" >{{reason.count}}. {{reason.title}}</div>
@@ -202,5 +173,35 @@ reasons:
     </div>
     <div class="space--md"></div>
    {% endfor %}
-   </div>
+ </div>
+</div>
+
+
+
+<div class="vpad--xl bg--white">
+  <div class="container">
+    <div class="width width--lg">
+       <div class="text text--xl text--center">
+         <h2 class="title title--lg text--bold ">{{page.highlights.title}}</h2>
+         <div class="space--xs"></div>
+         <p>{{page.highlights.description}}</p>
+       </div>
+    </div>
+  </div>
+  <div class="container">
+  <div class="row row--xxl-4-4-4 row--xl-6-6 row--gutters-sm"  style="margin-top: -40px;">
+  {% for highlight in page.highlights.items %}
+
+    <div class="col text--normal text text--md text--justify ">
+      <div class="bg-img bg--white bg-img--4-3" style="background-image: url('{{site.img}}/content/{{page.id}}/highlights/{{highlight.id}}.jpg');"> </div>
+      <div class="space--sm"></div>
+      <h5 class="title title--xxs text--left text--bold ">{{highlight.title}}</h5>
+      <div class="space--xs"></div>
+      <div>{{highlight.description}}</div>
+    </div>
+ {% endfor %}
+
+  </div>
+  <div class="space--xl"></div>
+</div>
 </div>
