--- a/_pages/index.html
+++ b/_pages/index.html
@@ -8,9 +8,9 @@ intro: this is my home page
 
 banner:
   title: Südafrika
-  title-sub: Sonnencreme nicht vergessen
+  title-sup: Aufregend anders
   title-size: banner-title--xl
-  bg-hero: "background-position: 65% bottom;"
+
 
 summary: "Kein Wunder, dass der Strand ein Klassiker unter den Urlaubszielen ist. Ewig locken Meer und Sand – und doch zeigen sie sich stets unterschiedlich. Zum Beweis präsentieren wir hier sieben beliebte Beach-Destinationen weltweit: Von der Karibik bis zum Indischen Ozean, von schwarzen Vulkanstränden bis zu Puder&shy;zuckersand unter Palmen. Passend zum Blick bis zum Horizont gibt es drei Hörausflüge für Perspektiv&shy;erweiterung im&nbsp;Urlaub."
 cta: Sonne tanken
@@ -34,11 +34,11 @@ intro: "Im Blick: nichts als Sandstrand und tiefblaues Meer (und ein wenig Palme
     </div>
     <div class="bob__text ">
       <div class="space--sm"></div>
-      <h2 class="title title--sm text--semibold ">{{destination.title}}</h2>
+      <h2 class="title title--xs text--bold text--upper">{{destination.title}}</h2>
       <div class="space--xxs"></div>
-      <p class="text text--lg">{{destination.summary}}</p>
+      <p class="text text--lg ">{{destination.summary}}</p>
       <div class="space--lg"></div>
-      <a href="{{site.baseurl}}{{destination.url}}" class="btn btn--orange">{{destination.cta}}</a>
+      <a href="{{site.baseurl}}{{destination.url}}" class="btn btn--outline btn--outline-orange">{{destination.cta}}</a>
     </div>
   </div>
 
