--- a/_pages/wildlife/index.html
+++ b/_pages/wildlife/index.html
@@ -12,11 +12,11 @@ banner:
   title-size: banner-title--xl
   bg-hero: "background-position: 65% bottom;"
 
-summary: "Kein Wunder, dass der Strand ein Klassiker unter den Urlaubszielen ist. Ewig locken Meer und Sand – und doch zeigen sie sich stets unterschiedlich. Zum Beweis präsentieren wir hier sieben beliebte Beach-Destinationen weltweit: Von der Karibik bis zum Indischen Ozean, von schwarzen Vulkanstränden bis zu Puder&shy;zuckersand unter Palmen. Passend zum Blick bis zum Horizont gibt es drei Hörausflüge für Perspektiv&shy;erweiterung im&nbsp;Urlaub."
+summary: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos rerum optio est consequuntur ut quibusdam soluta molestias perspiciatis, dolor corrupti culpa labore aspernatur voluptates, ipsum laborum eligendi placeat et fugiat sit, quidem, totam iure ea ad velit! Aliquid, placeat, ea. Amet accusamus voluptas odit harum necessitatibus consequatur delectus autem rerum architecto voluptatum. Consequuntur recusandae nemo, magni excepturi laborum nihil aperiam est!"
 cta: Sonne tanken
 
 intro-title: "Wildlife"
-intro: "Im Blick: nichts als Sandstrand und tiefblaues Meer (und ein wenig Palmen&shy;grün, Dünen&shy;gras oder Felsen&shy;klippen). Auf der Haut: Meeres&shy;brise und Sonnen&shy;strahlen. Im Ohr: Kurzweil mit Spannung für Ent&shy;spannung dank dieser Hörbücher."
+intro: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos rerum optio est consequuntur ut quibusdam soluta molestias perspiciatis, dolor corrupti culpa labore aspernatur voluptates, ipsum laborum eligendi placeat et fugiat sit, quidem, totam iure ea ad velit! Aliquid, placeat, ea. Amet accusamus voluptas odit harum necessitatibus consequatur delectus autem rerum architecto voluptatum. Consequuntur recusandae nemo, magni excepturi laborum nihil aperiam est!"
 
 
 parks:
@@ -25,52 +25,25 @@ parks:
   description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium maxime est soluta expedita inventore corrupti ipsam illo, eligendi sit id accusamus
   items:
 
-    - title: Boulder’s Beach
+    - title: Krüger Nationalpark
       id: one
-      description: "Auch als Lebkuchenstadt bekannt, lockt Nürnberg nicht nur zum Christkindlmarkt Besucher in die Stadt. Deren Wahrzeichen, die Kaiserbur"
+      description: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos rerum optio est consequuntur ut quibusdam soluta molestias perspiciatis, dolor corrupti culpa labore aspernatur voluptates, ipsum laborum eligendi placeat et fugiat sit, quidem, totam iure ea ad velit! Aliquid, placeat, ea. Amet accusamus voluptas odit harum necessitatibus consequatur delectus autem rerum architecto voluptatum. Consequuntur recusandae nemo, magni excepturi laborum nihil aperiam est!"
 
-    - title: "Tour durch Maboneng"
+    - title: "Addo Elephant Nationalpark"
       id: two
-      description: "Im Mittelalter war Regensburg durch florierende Handels&shy;beziehungen eine der wohl&shy;habendsten und einwohner&shy;stärksten Städte, was man dem zauber&shy;haften, "
+      description: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos rerum optio est consequuntur ut quibusdam soluta molestias perspiciatis, dolor corrupti culpa labore aspernatur voluptates, ipsum laborum eligendi placeat et fugiat sit, quidem, totam iure ea ad velit! Aliquid, placeat, ea. Amet accusamus voluptas odit harum necessitatibus consequatur delectus autem rerum architecto voluptatum. Consequuntur recusandae nemo, magni excepturi laborum nihil aperiam est!"
 
-    - title: "Instagram Stop Blyde River Canyon"
+    - title: "iSimangaliso Wetland Park"
       id: three
-      description: "Im Mittelalter war Regensburg durch florierende Handels&shy;beziehungen eine der wohl&shy;habendsten und einwohner&shy;stärksten Städte, was man dem zauber&shy;haften, "
+      description: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos rerum optio est consequuntur ut quibusdam soluta molestias perspiciatis, dolor corrupti culpa labore aspernatur voluptates, ipsum laborum eligendi placeat et fugiat sit, quidem, totam iure ea ad velit! Aliquid, placeat, ea. Amet accusamus voluptas odit harum necessitatibus consequatur delectus autem rerum architecto voluptatum. Consequuntur recusandae nemo, magni excepturi laborum nihil aperiam est!"
 
 
 safaris:
 
   title: Nationalparks
-  description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium maxime est soluta expedita inventore corrupti ipsam illo, eligendi sit id accusamus
-  items:
+  description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos rerum optio est consequuntur ut quibusdam soluta molestias perspiciatis, dolor corrupti culpa labore aspernatur voluptates, ipsum laborum eligendi placeat et fugiat sit, quidem, totam iure ea ad velit! Aliquid, placeat, ea. Amet accusamus voluptas odit harum necessitatibus consequatur delectus autem rerum architecto voluptatum. Consequuntur recusandae nemo, magni excepturi laborum nihil aperiam est!
 
-    - title: Boulder’s Beach
-      id: one
-      description: "Auch als Lebkuchenstadt bekannt, lockt Nürnberg nicht nur zum Christkindlmarkt Besucher in die Stadt. Deren Wahrzeichen, die Kaiserbur"
 
-    - title: "Tour durch Maboneng"
-      id: two
-      description: "Im Mittelalter war Regensburg durch florierende Handels&shy;beziehungen eine der wohl&shy;habendsten und einwohner&shy;stärksten Städte, was man dem zauber&shy;haften, "
-
-    - title: "Instagram Stop Blyde River Canyon"
-      id: three
-      description: "Im Mittelalter war Regensburg durch florierende Handels&shy;beziehungen eine der wohl&shy;habendsten und einwohner&shy;stärksten Städte, was man dem zauber&shy;haften, "
-
-    - title: "Wanderung in den Drakensbergen"
-      id: four
-      description: "Im Mittelalter war Regensburg durch florierende Handels&shy;beziehungen eine der wohl&shy;habendsten und einwohner&shy;stärksten Städte, was man dem zauber&shy;haften, "
-
-    - title: "Sundowner an den Augrabies Falls"
-      id: five
-      description: "Im Mittelalter war Regensburg durch florierende Handels&shy;beziehungen eine der wohl&shy;habendsten und einwohner&shy;stärksten Städte, was man dem zauber&shy;haften, "
-
-    - title: "Namaqualand / West Coast NP"
-      id: six
-      description: "Im Mittelalter war Regensburg durch florierende Handels&shy;beziehungen eine der wohl&shy;habendsten und einwohner&shy;stärksten Städte, was man dem zauber&shy;haften, "
-
-    - title: Walbeobachtung
-      id: seven
-      description: "Auf der Garteninsel Lindau im Bodensee kann man nur ins Schwärmen geraten. Eingerahmt von grünen Hügeln funkelt der See, zwischen der wachsamen"
 
 
 ---
@@ -105,31 +78,35 @@ safaris:
  {% endfor %}
 
 
- <div class="vpad--xxl bg--light">
-   <div class="container">
-     <div class="width width--lg">
+ <div class="bg--light">
+   <div class="container  width width--lg">
+     <div class="space--xxl"></div>
         <div class="text text--xl text--center">
-          <h2 class="title title--md text--semibold text--bv-darkgrey">{{page.intro-title}}</h2>
+          <h2 class="title title--md text--semibold text--bv-darkgrey">{{page.safaris.title}}</h2>
           <div class="space--xs"></div>
-          <p>{{page.intro}}</p>
+          <p>{{page.safaris.description}}</p>
         </div>
-     </div>
+
    </div>
  </div>
 
 
-
-  <div class="container vpad--lg">
-    <div class="row row--xl-4-4-4 row--lg-6-6 row--gutters " >
-      {% for safari in page.safaris.items %}
-        <div class="col text--normal text text--justify">
-          <div class="bg-img bg--white bg-img--4-3" style="background-image: url('{{site.img}}/content/{{page.id}}/{{safari.id}}.jpg');"> </div>
-          <div class="space--md"></div>
-          <h5 class="title title--xs text--left text--blue ">{{safari.title}}</h5>
-          <div class="space--xs"></div>
-          <div>{{safari.description}}</div>
-        </div>
+ <div class="bg--light">
+  <div class="container">
+    <div class="space--xxl"></div>
+      <div class="row row--xl-4-4-4 row--lg-6-6 row--gutters-sm " >
+      {% for safari in site.data.sections %}
+        <div class="col">
+              <div class="bg-img bg-img--16-9 bg-img--md-1-1 bg-img--lg-4-3 bg-img--xxl-1-1 shadow" style="border: 5px solid #fff; border-radius: 6px; background-image: url('{{site.img}}/content/wildlife/safari/{{safari.id}}.jpg');">
+                <a id="track-poi-{{safari.id}}" href="#" class="bg-img__link js-open-modal" data-open-modal="{{safari.id}}"></a>
+                <div class="bg-img__bg-overlay" style="border-radius: 6px;"></div>
+                <div class="bg-img__content">
+                  <div class="title title--sm">{{safari.title}}</div>
+                </div>
+              </div>
+          </div>
       {% endfor %}
     </div>
     <div class="space--xxl"></div>
   </div>
+</div>
