--- a/_pages/gewinnspiel/index.html
+++ b/_pages/gewinnspiel/index.html
@@ -5,16 +5,21 @@ nav: true
 nav-order: 5
 nav-title: gewinnspiel
 
-title: Compet&shy;ition
-long-title: Lorem ipsum dolor sit amet consectetur adipisicing elit.
-intro: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur aspernatur beatae tempora, voluptates ut recusandae ea exercitationem culpa mollitia quia similique. Perferendis cumque obcaecati ad pariatur. Quos iure sapiente amet beatae, officiis possimus minima expedita, ea ad. Doloribus et perspiciatis doloremque. Tenetur consequatur quam maiores odit, adipisci nostrum numquam quo mollitia eligendi! Debitis, culpa impedit, ex esse fugit enim quibusdam!
-enter-cta: Enter Now
+banner:
+  title: Gewinnspiel
+  title-sub: Gewinnen Sie eine Fotoreise nach Südafrika – mit Ihrer eigenen Nikon Kamera.
+
+intro: Begeben Sie sich auf ein einmaliges Abenteuer nach Südafrikas inklusive Flügen und&nbsp;Hotel und verwandeln Sie mit der Nikon D3500 atemberaubende Momente in bildgewaltige Fotoaufnahmen für die&nbsp;Ewigkeit.
 
 competition-form:
   id: comp
   post-url: "#getFormUrl"
   expiry-date: 2050-01-01
   fields:
+    - id: vorname
+      type: text
+      label: Vorname
+      required: true
     - id: name
       type: text
       label: Name
@@ -25,14 +30,14 @@ competition-form:
       required: true
     - id: qualify
       type: radio
-      label: Are you a UK resident and over the age of 18?
+      label: Wohnen Sie in Deutschland und sind Sie über 18?
       required: true
       options:
         - id: qualify-true
-          label: 'Yes'
+          label: 'Ja'
           value: 'yes'
         - id: qualify-false
-          label: 'No'
+          label: 'Nein'
           value: 'no'
           invalid: true
     - id: opt-in
@@ -41,67 +46,12 @@ competition-form:
       required: true
       options:
         - id: opt-in-true
-          label: 'Yes'
+          label: 'Ja'
           value: 'yes'
         - id: opt-in-false
-          label: 'No'
+          label: 'Nein'
           value: 'no'
-    - id: storytime
-      type: text-long
-      label: Tell us about your favourite travel experience
-      required: true
-    - id: eggs
-      type: select
-      label: What is your favourite continent?
-      required: true
-      options:
-        - label: Africa
-          value: africa
-        - label: Antarctica
-          value: antarctica
-        - label: Asia
-          value: asia
-        - label: Europe
-          value: europe
-        - label: North America
-          value: north-america
-        - label: Oceania
-          value: oceania
-        - label: South America
-          value: south-america
-    - id: contact
-      type: checkbox
-      label: Do you have a preference on how we should contact you?
-      required: true
-      options:
-        - id: contact-email
-          label: Email
-          value: email
-        - id: contact-post
-          label: Post
-          value: post
-        - id: contact-phone
-          label: Phone
-          value: phone
-    - id: week
-      type: select
-      label: What is your favourite day of the week?
-      options:
-        - label: Monday
-          value: mon
-        - label: Tuesday
-          value: tue
-        - label: Wednesday
-          value: wed
-        - label: Thursday
-          value: thur
-        - label: Friday
-          value: fri
-        - label: Saturday
-          value: sat
-        - label: Sunday
-          value: sun
-  submit: Submit Entry
+  submit: Absenden
   terms: >
     By submitting your entry, you agree to the <a href="#" class="js-open-modal link--underlined" data-open-modal="competition-terms">terms and conditions</a> of this competition
 ---
